--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -1,113 +1,165 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
+
 /**** NAVBAR ****/
 
-.navbar{
-    padding:3%;
+.conatainer-fluid{
+    margin-right: 100px;
 }
 
+/* .navbar{
+    padding:1% 6%;
+} */
+
 .navbar-brand{
+    /* font-family: "Montserrat-Black"; */
     font-weight: bold;
+    font-size: 1.5rem;
+
 }
 
 .nav-item{
     padding: 0 15px;
 }
+#home:hover{
+    color: grey;
+}
+#about:hover{
+    color: grey;
+}
+#contact:hover{
+    color: grey;
+}
+
+.form-control{
+    width: 300px;
+}
+
+.header-button{
+    margin-left: auto;
+}
+
+.btn-1{
+    border-radius: 25px;
+    margin: 0 5px;
+    font-size: 1.1rem;
+    letter-spacing: 0.3px;
+}
+#register:hover{
+    color: black;
+    background-color: white;
+}
+
 
 /**** TITLE ****/
 
 #main-title{
-    text-align: center;
-    background-color: #ef8172;
+    background-color: #F9FCFB;
     color: #fff;
+    text-align: center;
 }
 
 .carousel-images{
-    height: 30rem;
-    width: 100%; 
+    height: 30vw;
+    object-fit: cover; 
+    width: 100%;
 }
 
 /**** CARDS ****/
 
 #main-course{
-    padding: 5%;
+    padding: 5% 3%;
 }
 
 .food-column{
-    padding: 0 2%;
+    padding: 0 1%;
 }
 
 .card-group{
-    padding: 0 4% 7%;
+    padding: 0 4% 4%;
+}
+
+.card-body{
+    padding-left: 0;
 }
 
 .card{
     justify-content: center;
+    text-align: center;
+}
+.card:hover{
+    border: 2px solid green;
+    padding: 5px;
 }
 
+.card-img-top{
+    height: 15vw;
+    object-fit: cover;
+    width: 100%;
+}
 
 /* STATES */
 
 .states{
-    padding: 0 7%;
-    margin-bottom: 0;
-    font-size: 1.6rem;
     display: block;
+    font-size: 1.6rem;
     font-weight: 300;
+    margin-bottom: 0;
+    padding: 0 7%;
 }
 
 .state-heading{
-    margin: 0, 0, 2.4rem;
-    color: blueviolet;
+    color: green;
     font-size: 2.4rem;
-    line-height: 3.2rem;
     font-weight: 500;
+    line-height: 3.2rem;
+    margin: 0, 0, 2.4rem;
 }
 
 .individual-state{
     display: inline-block;
-    width: 100%;
     padding-bottom: 3%;
+    width: 100%;
 }
 
 .state-food{
-    display: inline-block;
-    text-align: left;
-    text-decoration: none;
     color: cadetblue;
-    margin-bottom: 1.2rem;
-    width: 20%;
+    display: inline-block;
     font-size: 1rem;
     line-height: 1.8rem;
+    margin-bottom: 1.2rem;
+    margin-right: 2.5rem;
     overflow: hidden;
+    text-align: left;
+    text-decoration: none;
     text-overflow: ellipsis;
-    white-space: nowrap;
     vertical-align: bottom;
-    margin-right: 3rem;
+    white-space: nowrap;
+    width: 20%;
 }
 
-/**** BUTTON ****/
-
-.download-button {
-    margin: 5% 3% 5% 0;
-}
 
 /**** CTA ****/
 
+.download-button {
+    margin: 5% 3% 5% 0;
+
+}
+
 #cta{
-    background-color: #ff4c68;
-    color: #fff;
-    text-align: center;
+    background-color: #E8ECD6;
+    color: black;
     padding:7% 15% ;
+    text-align: center;
     
 }
 
 .cta-heading{
     font-family: "Montserrat-Black";
-    font-weight: bold;
     font-size: 3.5rem;
+    font-weight: bold;
     line-height: 1.5;
 
 }
@@ -124,55 +176,19 @@
 
 
 .footer-link{
-    padding: 2%;
     color: #11999E;
     font-family: 'Montserrat', sans-serif;
     margin: 10px 10px;
+    padding: 2%;
     text-decoration: none;
     
 }
 
 .copyright {
+    align-items: center;
     color: black;
-    font-size: 0.75rem;
-    padding: 20px 10px 0;
     display: flex;
+    font-size: 0.75rem;
     justify-content: center;
-    align-items: center;
+    padding: 20px 10px 0;
 }
-.card{
-    background-color: #ff4c68;
-    text-align: center;
-    display: block;
-    align-items: center;
-    /* font-weight: bold; */
-}
-/* pngs */
-#img1{
-    padding-top: 15px;
-    height: 100px;
-    width: 100px;
-    /* justify-content: center; */
-}
-#img2{
-    padding-top: 15px;
-    height: 100px;
-    width: 100px;
-    /* justify-content: center; */
-}
-#img3{
-    padding-top: 15px;
-    height: 100px;
-    width: 100px;
-    /* justify-content: center; */
-}
-#img4{
-    padding-top: 15px;
-    height: 100px;
-    width: 100px;
-    /* justify-content: center; */
-}
-h5{
-    font-weight: bold;
-}
-
