--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,194 +1,296 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /**** NAVBAR ****/
 
-.conatainer-fluid{
-    margin-right: 100px;
+.conatainer-fluid {
+  margin-right: 100px;
 }
 
 /* .navbar{
     padding:1% 6%;
 } */
 
-.navbar-brand{
-    /* font-family: "Montserrat-Black"; */
-    font-weight: bold;
-    font-size: 1.5rem;
-
+.navbar-brand {
+  /* font-family: "Montserrat-Black"; */
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
-.nav-item{
-    padding: 0 15px;
+.nav-item {
+  padding: 0 15px;
 }
-#home:hover{
-    color: grey;
+#home:hover {
+  color: grey;
 }
-#about:hover{
-    color: grey;
+#about:hover {
+  color: grey;
 }
-#contact:hover{
-    color: grey;
-}
-
-.form-control{
-    width: 300px;
+#contact:hover {
+  color: grey;
 }
 
-.header-button{
-    margin-left: auto;
+.form-control {
+  width: 300px;
 }
 
-.btn-1{
-    border-radius: 25px;
-    margin: 0 5px;
-    font-size: 1.1rem;
-    letter-spacing: 0.3px;
-}
-#register:hover{
-    color: black;
-    background-color: white;
+.header-button {
+  margin-left: auto;
 }
 
+.btn-1 {
+  border-radius: 25px;
+  margin: 0 5px;
+  font-size: 1.1rem;
+  letter-spacing: 0.3px;
+}
+#register:hover {
+  color: black;
+  background-color: white;
+}
 
 /**** TITLE ****/
 
-#main-title{
-    background-color: #F9FCFB;
-    color: #fff;
-    text-align: center;
+#main-title {
+  background-color: #f9fcfb;
+  color: #fff;
+  text-align: center;
 }
 
-.carousel-images{
-    height: 30vw;
-    object-fit: cover; 
-    width: 100%;
+.carousel-images {
+  height: 30vw;
+  object-fit: cover;
+  width: 100%;
 }
 
 /**** CARDS ****/
 
-#main-course{
-    padding: 5% 3%;
+#main-course {
+  padding: 5% 3%;
 }
 
-.food-column{
-    padding: 0 1%;
+.food-column {
+  padding: 0 1%;
 }
 
-.card-group{
-    padding: 0 4% 4%;
+.card-group {
+  padding: 0 4% 4%;
 }
 
-.card-body{
-    padding-left: 0;
+.card-body {
+  padding-left: 0;
 }
 
-.card{
-    justify-content: center;
-    text-align: center;
+.card {
+  justify-content: center;
+  text-align: center;
 }
-.card:hover{
-    border: 2px solid green;
-    padding: 5px;
-}
-
-.card-img-top{
-    height: 15vw;
-    object-fit: cover;
-    width: 100%;
+.card:hover {
+  border: 2px solid green;
+  padding: 5px;
 }
 
-/* STATES */
-
-.states{
-    display: block;
-    font-size: 1.6rem;
-    font-weight: 300;
-    margin-bottom: 0;
-    padding: 0 7%;
+.card-img-top {
+  height: 15vw;
+  object-fit: cover;
+  width: 100%;
 }
 
-.state-heading{
-    color: green;
-    font-size: 2.4rem;
-    font-weight: 500;
-    line-height: 3.2rem;
-    margin: 0, 0, 2.4rem;
+#trending {
+  color: black;
+  font-size: 2.4rem;
+  font-weight: 500;
+  line-height: 3.2rem;
+  margin: 0, 0, 2.4rem;
+  padding-left: 4%;
+  padding-top: 4%;
 }
-
-.individual-state{
-    display: inline-block;
-    padding-bottom: 3%;
-    width: 100%;
+/* stars */
+.rating-wrapper1 label {
+  display: inline-block;
+  width: 25px;
+  position: relative;
+  cursor: pointer;
 }
-
-.state-food{
-    color: cadetblue;
-    display: inline-block;
-    font-size: 1rem;
-    line-height: 1.8rem;
-    margin-bottom: 1.2rem;
-    margin-right: 2.5rem;
-    overflow: hidden;
-    text-align: left;
-    text-decoration: none;
-    text-overflow: ellipsis;
-    vertical-align: bottom;
-    white-space: nowrap;
-    width: 20%;
+.rating-wrapper1 {
+  direction: rtl;
 }
-
+.rating-wrapper1 input {
+  display: none;
+}
+.rating-wrapper1 label:before {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+}
+.rating-wrapper1 label:after {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  color: #fac209;
+  opacity: 0;
+}
+.rating-wrapper1 label:hover:after,
+.rating-wrapper1 label:hover ~ label:after,
+.rating-wrapper1 input:checked ~ label:after {
+  opacity: 1;
+}
+.rating-wrapper2 label {
+  display: inline-block;
+  width: 25px;
+  position: relative;
+  cursor: pointer;
+}
+.rating-wrapper2 {
+  direction: rtl;
+}
+.rating-wrapper2 input {
+  display: none;
+}
+.rating-wrapper2 label:before {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+}
+.rating-wrapper2 label:after {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  color: #fac209;
+  opacity: 0;
+}
+.rating-wrapper2 label:hover:after,
+.rating-wrapper2 label:hover ~ label:after,
+.rating-wrapper2 input:checked ~ label:after {
+  opacity: 1;
+}
+.rating-wrapper3 label {
+  display: inline-block;
+  width: 25px;
+  position: relative;
+  cursor: pointer;
+}
+.rating-wrapper3 {
+  direction: rtl;
+}
+.rating-wrapper3 input {
+  display: none;
+}
+.rating-wrapper3 label:before {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+}
+.rating-wrapper3 label:after {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  color: #fac209;
+  opacity: 0;
+}
+.rating-wrapper3 label:hover:after,
+.rating-wrapper3 label:hover ~ label:after,
+.rating-wrapper3 input:checked ~ label:after {
+  opacity: 1;
+}
+.rating-wrapper4 label {
+  display: inline-block;
+  width: 25px;
+  position: relative;
+  cursor: pointer;
+}
+.rating-wrapper4 {
+  direction: rtl;
+}
+.rating-wrapper4 input {
+  display: none;
+}
+.rating-wrapper4 label:before {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+}
+.rating-wrapper4 label:after {
+  content: "\2605";
+  position: absolute;
+  font-size: 30px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  color: #fac209;
+  opacity: 0;
+}
+.rating-wrapper4 label:hover:after,
+.rating-wrapper4 label:hover ~ label:after,
+.rating-wrapper4 input:checked ~ label:after {
+  opacity: 1;
+}
 
 /**** CTA ****/
 
 .download-button {
-    margin: 5% 3% 5% 0;
-
+  margin: 5% 3% 5% 0;
 }
 
-#cta{
-    background-color: #E8ECD6;
-    color: black;
-    padding:7% 15% ;
-    text-align: center;
-    
+#cta {
+  background-color: #e8ecd6;
+  color: black;
+  padding: 7% 15%;
+  text-align: center;
 }
 
-.cta-heading{
-    font-family: "Montserrat-Black";
-    font-size: 3.5rem;
-    font-weight: bold;
-    line-height: 1.5;
-
+.cta-heading {
+  font-family: "Montserrat-Black";
+  font-size: 3.5rem;
+  font-weight: bold;
+  line-height: 1.5;
 }
 
 /**** FOOTER ****/
 
 .bottom-container {
-    background-color: #FEECE9;
-    /* padding: 40px 0 5px ; */
-    padding: 2% 15%;
-    text-align: center;
-
+  background-color: #feece9;
+  /* padding: 40px 0 5px ; */
+  padding: 2% 15%;
+  text-align: center;
 }
 
-
-.footer-link{
-    color: #11999E;
-    font-family: 'Montserrat', sans-serif;
-    margin: 10px 10px;
-    padding: 2%;
-    text-decoration: none;
-    
+.footer-link {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px 10px;
+  padding: 2%;
+  text-decoration: none;
 }
 
 .copyright {
-    align-items: center;
-    color: black;
-    display: flex;
-    font-size: 0.75rem;
-    justify-content: center;
-    padding: 20px 10px 0;
+  align-items: center;
+  color: black;
+  display: flex;
+  font-size: 0.75rem;
+  justify-content: center;
+  padding: 20px 10px 0;
 }
