--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -107,6 +107,15 @@
   padding-left: 4%;
   padding-top: 4%;
 }
+#trending1 {
+  color: black;
+  font-size: 2.4rem;
+  font-weight: 500;
+  line-height: 3.2rem;
+  margin: 0, 0, 2.4rem;
+  padding-left: 4%;
+  padding-top: 4%;
+}
 /* stars */
 .rating-wrapper1 label {
   display: inline-block;
