--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /**** NAVBAR ****/
@@ -9,10 +12,6 @@
   margin-right: 100px;
   position: fixed;
 }
-
-/* .navbar{
-    padding:1% 6%;
-} */
 
 .navbar-brand {
   /* font-family: "Montserrat-Black"; */
@@ -23,29 +22,8 @@
 .nav-item {
   padding: 0 15px;
 }
-/* DROPDOWN */
-
-.states:hover {
-  color: gray;
-}
-
-.box-1 {
-  padding: 1% 12% 1% 2%;
-}
-
-.dropdown-menu {
-  width: 750px;
-}
-
-.dropdown-states {
-  display: flex;
-}
-
-.states {
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.1rem;
-  line-height: 2rem;
+#contact {
+  padding-right: 330px;
 }
 #home:hover {
   color: grey;
@@ -61,9 +39,6 @@
   width: 300px;
 }
 
-.header-button {
-  margin-left: auto;
-}
 #ejaz {
   color: white;
 }
@@ -102,199 +77,301 @@
   width: 100%;
 }
 
-/**** CARDS ****/
-
-#main-course {
-  padding: 5% 3%;
+:root {
+  --tenne-tawny: #060c0aab;
+  --tenne-tawny-dark: #060c0aab;
+}
+body {
+  font-weight: 300;
+  font-size: 1.05rem;
+  line-height: 1.6;
+  font-family: "Poppins", sans-serif;
 }
 
-.food-column {
-  padding: 0 1%;
+/*  */
+.btn {
+  font-family: inherit;
+  cursor: pointer;
+  outline: 0;
+  font-size: 1.05rem;
+}
+.text {
+  opacity: 0.8;
+}
+.title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
-.card-group {
-  padding: 0 4% 4%;
+/*  */
+.container {
+  min-height: 100vh;
 }
-
-.card-body {
-  padding-left: 0;
-}
-
-.card {
-  justify-content: center;
+.meal-wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  background: #fff;
   text-align: center;
 }
-.card:hover {
-  border: 2px solid green;
-  padding: 5px;
+.meal-search {
+  margin: 2rem 0;
+}
+.meal-search cite {
+  font-size: 1rem;
+}
+.meal-search-box {
+  margin: 1.2rem 0;
+  display: flex;
+  align-items: stretch;
+}
+.search-control,
+.search-btn {
+  width: 100%;
+}
+.search-control {
+  padding: 0 1rem;
+  font-size: 1.1rem;
+  font-family: inherit;
+  outline: 0;
+  border: 1px solid var(--tenne-tawny);
+  color: var(--tenne-tawny);
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+}
+.search-control::placeholder {
+  color: var(--tenne-tawny);
+}
+.search-btn {
+  width: 55px;
+  height: 55px;
+  font-size: 1.8rem;
+  background: var(--tenne-tawny);
+  color: #fff;
+  border: none;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  transition: all 0.4s linear;
+  -webkit-transition: all 0.4s linear;
+  -moz-transition: all 0.4s linear;
+  -ms-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
+}
+.search-btn:hover {
+  background: var(--tenne-tawny-dark);
+}
+.meal-result {
+  margin-top: 4rem;
+}
+#meal {
+  margin: 2.4rem 0;
+}
+.meal-item {
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
+  margin: 2rem 0;
+}
+.meal-img img {
+  width: 100%;
+  display: block;
+}
+.meal-name {
+  padding: 1.5rem 0.5rem;
+}
+.meal-name h3 {
+  font-size: 1.4rem;
+}
+.recipe-btn {
+  text-decoration: none;
+  color: #fff;
+  background: var(--tenne-tawny);
+  font-weight: 500;
+  font-size: 1.1rem;
+  padding: 0.75rem 0;
+  display: block;
+  width: 175px;
+  margin: 1rem auto;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+  transition: all 0.4s linear;
+  -webkit-transition: all 0.4s linear;
+  -moz-transition: all 0.4s linear;
+  -ms-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
+}
+.recipe-btn:hover {
+  background: var(--tenne-tawny-dark);
 }
 
-.card-img-top {
-  height: 15vw;
-  object-fit: cover;
+/* meal details */
+.meal-details {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  color: #fff;
+  background: var(--tenne-tawny);
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  width: 90%;
+  height: 90%;
+  overflow-y: scroll;
+  display: none;
+  padding: 2rem 0;
+}
+.meal-details::-webkit-scrollbar {
+  width: 10px;
+}
+.meal-details::-webkit-scrollbar-thumb {
+  background: #f0f0f0;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+}
+
+/* js related */
+.showRecipe {
+  display: block;
+}
+
+.meal-details-content {
+  margin: 2rem;
+}
+.meal-details-content p:not(.recipe-category) {
+  padding: 1rem 0;
+}
+.recipe-close-btn {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  font-size: 1.8rem;
+  background: #fff;
+  border: none;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.9;
+}
+.recipe-title {
+  letter-spacing: 1px;
+  padding-bottom: 1rem;
+}
+.recipe-category {
+  background: #fff;
+  font-weight: 600;
+  color: var(--tenne-tawny);
+  display: inline-block;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.3rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+}
+.recipe-category {
+  background: #fff;
+  font-weight: 600;
+  color: var(--tenne-tawny);
+  display: inline-block;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.3rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+}
+.recipe-instruct {
+  padding: 1rem 0;
+}
+.recipe-meal-img img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  margin: 0 auto;
+  display: block;
+}
+.recipe-link {
+  margin: 1.4rem 0;
+}
+.recipe-link a {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 700;
+  transition: all 0.4s linear;
+  -webkit-transition: all 0.4s linear;
+  -moz-transition: all 0.4s linear;
+  -ms-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
+}
+.recipe-link a:hover {
+  opacity: 0.8;
+}
+
+/*  */
+.notFound {
+  grid-template-columns: 1fr !important;
+  color: black;
+  font-size: 1.8rem;
+  font-weight: 600;
   width: 100%;
 }
 
-#trending {
-  color: black;
-  font-size: 2.4rem;
-  font-weight: 500;
-  line-height: 3.2rem;
-  margin: 0, 0, 2.4rem;
-  padding-left: 7%;
-  padding-top: 4%;
-}
-#trending1 {
-  color: black;
-  font-size: 2.4rem;
-  font-weight: 500;
-  line-height: 3.2rem;
-  margin: 0, 0, 2.4rem;
-  padding-left: 4%;
-  padding-top: 4%;
-}
-/* stars */
-.rating-wrapper1 label {
-  display: inline-block;
-  width: 25px;
-  position: relative;
-  cursor: pointer;
-}
-.rating-wrapper1 {
-  direction: rtl;
-}
-.rating-wrapper1 input {
-  display: none;
-}
-.rating-wrapper1 label:before {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-}
-.rating-wrapper1 label:after {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  color: #fac209;
-  opacity: 0;
-}
-.rating-wrapper1 label:hover:after,
-.rating-wrapper1 label:hover ~ label:after,
-.rating-wrapper1 input:checked ~ label:after {
-  opacity: 1;
-}
-.rating-wrapper2 label {
-  display: inline-block;
-  width: 25px;
-  position: relative;
-  cursor: pointer;
-}
-.rating-wrapper2 {
-  direction: rtl;
-}
-.rating-wrapper2 input {
-  display: none;
-}
-.rating-wrapper2 label:before {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-}
-.rating-wrapper2 label:after {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  color: #fac209;
-  opacity: 0;
-}
-.rating-wrapper2 label:hover:after,
-.rating-wrapper2 label:hover ~ label:after,
-.rating-wrapper2 input:checked ~ label:after {
-  opacity: 1;
-}
-.rating-wrapper3 label {
-  display: inline-block;
-  width: 25px;
-  position: relative;
-  cursor: pointer;
-}
-.rating-wrapper3 {
-  direction: rtl;
-}
-.rating-wrapper3 input {
-  display: none;
-}
-.rating-wrapper3 label:before {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-}
-.rating-wrapper3 label:after {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  color: #fac209;
-  opacity: 0;
-}
-.rating-wrapper3 label:hover:after,
-.rating-wrapper3 label:hover ~ label:after,
-.rating-wrapper3 input:checked ~ label:after {
-  opacity: 1;
-}
-.rating-wrapper4 label {
-  display: inline-block;
-  width: 25px;
-  position: relative;
-  cursor: pointer;
-}
-.rating-wrapper4 {
-  direction: rtl;
-}
-.rating-wrapper4 input {
-  display: none;
-}
-.rating-wrapper4 label:before {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-}
-.rating-wrapper4 label:after {
-  content: "\2605";
-  position: absolute;
-  font-size: 30px;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  color: #fac209;
-  opacity: 0;
-}
-.rating-wrapper4 label:hover:after,
-.rating-wrapper4 label:hover ~ label:after,
-.rating-wrapper4 input:checked ~ label:after {
-  opacity: 1;
+/* Media Queries */
+@media screen and (min-width: 600px) {
+  .meal-search-box {
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
+@media screen and (min-width: 768px) {
+  #meal {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+  .meal-item {
+    margin: 0;
+  }
+  .meal-details {
+    width: 700px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #meal {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 /**** CTA ****/
 
 .download-button {
@@ -302,7 +379,7 @@
 }
 
 #cta {
-  background-color: #e8ecd6;
+  background-color: rgb(250, 245, 245);
   color: black;
   padding: 7% 15%;
   text-align: center;
